IC-Test/objects/F2S_Activity_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <label>Role ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>A field to calculate the number of sales calls made to a target account.</description>
        <label>Target Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>F2S Activity Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>F2S Activity Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>F2S Activities Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>